[project]
name = "mypy"
version = "0.1.0"
description = "Chris's personal Python utilities"
authors = [{ name = "Christopher McMahon" }]
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]